# cargo-q

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  executor.rs  main.rs  parser.rs  process.rs  routine.rs  thread_pool.rs
src/strategy/: dependent.rs  mod.rs  parallel.rs  sequential.rs
