[package]
name = "cargo-q"
version = "0.1.3"
edition = "2021"
description = "A cargo subcommand for running multiple cargo commands in a time"
keywords = ["cargo", "subcommand", "plugin"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/guuzaa/cargo-q"
exclude = [".github", ".vscode", ".gitignore"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
