[package]
name = "cargo-q"
version = "0.2.0"
edition = "2021"
description = "A Cargo subcommand for running multiple cargo commands sequentially or in parallel."
keywords = ["cargo", "subcommand", "plugin"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/guuzaa/cargo-q"
exclude = [".github", ".vscode", ".gitignore"]
documentation = "https://docs.rs/cargo-q"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
